--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -158,7 +158,7 @@
 						@Html.TextAreaFor(m => m.User.Bio, new { cols = 50, rows = 5, maxlength = 300 })
 					</li>
 				</ol>
-				<input type="button" id="registerFormBtn" class="myButton-white" value="Utwórz konto" data-bind="click: $root.registerUserOnClick" />
+				<span id="registerFormBtn" class="save-text hover-cursor-pointer" data-bind="click: $root.registerUserOnClick">Utwórz konto</span>
 			</fieldset>
   }
 		<p>
