--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="event-block-info-header" data-bind="style: { color: kind.headerColor }">
-	<div style="float: left; padding: 10px; background: #BAB39D; border-left: 2px solid #9D9784;">
+	<div style="float: left; padding: 10px; /*background: #BAB39D; */background: #B8A889; border-left: 2px solid #9D9784;">
 		<span data-bind="text: kind.name"></span>
 	</div>
 
@@ -47,20 +47,26 @@
 
 </div>
 <div class="event-block-info-footer">
-	<div data-bind="if: addedBy.toUpperCase() != $root.userName.toUpperCase()">
-		<div style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
-			<span data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick( id, startDate.year, startDate.month, startDate.day ) }" class="hover-cursor-pointer event-block-user-option">dodaj do mojego kalendarza +</span>
+	<div data-bind="if: !isEventAddedToCurrentUserCalendar">
+		<div data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick( $element, id, startDate.year, startDate.month, startDate.day ) }" class="hover-cursor-pointer event-block-user-option" style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
+			<span>dodaj do mojego kalendarza +</span>
 		</div>
 	</div>
-	<div data-bind="if: addedBy.toUpperCase() == $root.userName.toUpperCase()">
+	<div data-bind="if: isEventAddedToCurrentUserCalendar">
 		<div style="color: #67C767; padding-bottom: 10px; padding-left: 10px;">
 			<span>dodane do mojego kalendarza ✓</span>
 		</div>
 	</div>
-	<div data-bind="if: addedBy.toUpperCase() == $root.userName.toUpperCase()">
-		<div style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;"><span class="hover-cursor-pointer event-block-user-option">zgłaszam chęć uczestnictwa</span></div>
+	<div data-bind="if: isCurrentUserSignedUpForEvent">
+		<div style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
+			<span>zgłoszono chęć uczestnictwa w wydarzeniu ✓</span>
+		</div>
 	</div>
-
+	<div data-bind="if: !isCurrentUserSignedUpForEvent">
+		<div class="hover-cursor-pointer event-block-user-option" style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
+			<span>zgłaszam chęć uczestnictwa</span>
+		</div>
+	</div>
 </div>
 
 
