updated layout - public events have full border

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -3,10 +3,10 @@
 		<span>Mój kalendarz</span><div class="close-btn-x hover-cursor-pointer" data-bind="click:$root.closeAllSelectedEventsListContainerOnClick">x</div>
 	</header>
 
-	<div style="padding: 10px;">
+	<div style="padding: 10px; border-top: 2px solid #DEDEDE">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="show-old-events-checkbox"></div>
-			<span style="padding: 4px;">Pokaż stare wydarzenia</span>
+			<span style="padding: 4px; color: #C0CEB1;">Pokaż stare wpisy</span>
 		</div>
 	</div>
 
