--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -8,7 +8,7 @@
 	<div style="padding: 10px;">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
 			<div class="show-old-events-checkbox"></div>
-			<span style="padding: 4px;">Pokaż stare wydarzenia</span>
+			<span style="padding: 4px; color: #C0CEB1;">Pokaż stare wydarzenia</span>
 		</div>
 	</div>
 
