--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -100,6 +100,7 @@ header, footer, nav, section, div {
 	z-index: 100;
 	position: absolute;
 	display: none;
+	font-family: h;
 }
 
 /*calendar css*/
@@ -270,10 +271,11 @@ header, footer, nav, section, div {
 	text-align: left;
 	padding: 5px;
 	padding-left: 20px;
+	background: #D7D0B8;
 	/*color: rgb(231, 224, 202);*/
-	color: rgb(144, 138, 119);
+	color: rgb(255, 251, 239);
 	/*border-bottom: 1px solid rgb(242, 242, 242);*/
-	border-bottom: 1px solid rgb(250, 248, 240);
+	border-bottom: 2px solid rgb(177, 177, 119);
 	font-size: 1.4em;
 	/*background: rgb(186, 176, 146);
 	border-top-left-radius: 6px;
@@ -283,20 +285,18 @@ header, footer, nav, section, div {
 
 .display-events-overview-container {
 	font-size: 1.2em;
-	/*background: rgb(223, 215, 188);*/
-	/*width: 88%;
-	border-radius: 6px;
-	border: 1px solid rgb(212, 202, 168);*/
+	background: rgb(253, 252, 248);
 	display: none;
 	padding-bottom: 40px;
 	text-align: center;
+	border: 2px solid #F7F5EF;
 }
 
 	.display-events-overview-container .legend-container {
 		font-weight: bold;
-		color: rgb(118, 104, 75);
+		color: rgb(171, 166, 152);
 		margin: 0 auto;
-		width: 90%;
+		background-color: #EDE9D9;
 	}
 
 	.display-events-overview-container .legend-title {
@@ -309,7 +309,7 @@ header, footer, nav, section, div {
 	.display-events-overview-container .legend-ispublic {
 		display: inline-block;
 		padding: 5px;
-		margin-left:-55px;
+		margin-left: -55px;
 		text-align: left;
 	}
 
@@ -321,7 +321,7 @@ header, footer, nav, section, div {
 	}
 
 	.display-events-overview-container .legend-oldorupcoming {
-		color: white;
+		color: #C0CEB1;
 		padding: 4px 0;
 		font-size: 1.6em;
 		text-align: center;
@@ -346,7 +346,7 @@ header, footer, nav, section, div {
 	}
 
 .display-events-overview-list:nth-child(odd) {
-	background: rgb(231, 224, 201);
+	/*background: rgb(231, 224, 201);*/
 }
 
 .hour {
@@ -390,7 +390,8 @@ header, footer, nav, section, div {
 .event-kind-tag {
 	display: inline-block;
 	padding: 5px;
-	background: rgb(184, 168, 137);
+	/*background: rgb(184, 168, 137);*/
+	background: rgb(171, 161, 143);
 	width: 100px;
 	/*box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;*/
 	line-height: 1.5;
@@ -541,6 +542,7 @@ header, footer, nav, section, div {
 	min-height: 500px;
 	padding-top: 20px;
 	border-left: 3px solid rgb(215, 208, 184);
+	padding-bottom: 40px;
 }
 
 .login-bar-container {
@@ -666,7 +668,7 @@ header, footer, nav, section, div {
 	height: 0px;
 	color: rgb(133, 123, 100);
 	font-size: 1em;
-	margin-bottom:20px;
+	margin-bottom: 20px;
 	width: 100px;
 	text-align: center;
 }
@@ -706,9 +708,9 @@ header, footer, nav, section, div {
 	top: 0px;
 	margin-bottom: 20px;
 	margin-top: 20px;
-	background:#FDFCF8;
-	border:2px solid #E4E0D1;
-	border-top:none;
+	background: #FDFCF8;
+	border: 2px solid #E4E0D1;
+	border-top: none;
 }
 
 .menu-item-number-container {
@@ -736,23 +738,24 @@ header, footer, nav, section, div {
 
 .show-old-events-checkbox {
 	vertical-align: bottom;
-	border: 2px solid rgb(255, 250, 232);
+	border: 2px solid rgb(206, 198, 169);
 	height: 22px;
 	width: 22px;
 	text-align: center;
 	padding: 4px;
 	border-radius: 4px;
 	display: inline-block;
+	color: #C0CEB1;
 }
 
 .list-item-star {
-display: inline-block;
+	display: inline-block;
 }
 
-.list-item-star img {
-	width: 30px !important;
-	vertical-align:middle;
-}
+	.list-item-star img {
+		width: 30px !important;
+		vertical-align: middle;
+	}
 
 #detailsPageAllEventsListContainer {
 	margin-left: 1.8%;
@@ -947,6 +950,10 @@ background:rgb(115, 233, 162);
 
 .details-edit-event-link {
 	color: gray;
+}
+
+.edit-mode-note-container {
+	clear: both;
 }
 
 #spinnerText {
@@ -1733,7 +1740,7 @@ legend {
 }
 
 .details-event-block-info-body {
-	color: rgb(250, 250, 250);
+	color: white;
 }
 
 
@@ -1802,11 +1809,10 @@ legend {
 .details-event-block-container {
 	text-align: left;
 	padding: 0 20px;
-	border-radius: 6px;
-	background: rgb(223, 215, 188);
-	border: 1px solid rgb(244, 241, 231);
 	position: relative;
 	line-height: 1;
+	border-left: 2px solid white;
+	border-bottom: 2px solid white;
 }
 
 .event-shadow-box {
@@ -1888,12 +1894,12 @@ legend {
 }
 
 .event-block-info-description {
-	font-size: 1.2em;
+	font-size: 1.4em;
 }
 
 .event-block-info-details {
 	line-height: 1;
-	font-size: 1.2em;
+	font-size: 1.4em;
 }
 
 .event-block-info-time {
@@ -1905,11 +1911,11 @@ legend {
 }
 
 .details-event-block-info-time {
-	font-size: 1.4em;
+	font-size: 2.4em;
 	line-height: 1;
-	color: rgb(87, 80, 64);
+	color: white;
 	margin-bottom: 10px;
-	padding: 4px 4px;
+	display: inline-block;
 }
 
 .event-block-info-date {
@@ -1945,9 +1951,9 @@ legend {
 .details-event-block-info-date {
 	font-size: 1.4em;
 	line-height: 1;
-	color: rgb(87, 80, 64);
-	margin-bottom: 10px;
-	padding: 4px 4px;
+	color: white;
+	display: inline-block;
+	padding-left: 10px;
 }
 
 .details-event-block-info-price {
