updated webAPI route, fixed SignUpUserToEvent functionality

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -5,21 +5,14 @@
 	</span>
 	<div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
 </header>	
-	<div style="padding: 10px;">
+	<div style="padding: 10px; border-top: 2px solid #DEDEDE;">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
 			<div class="show-old-events-checkbox"></div>
-			<span style="padding: 4px; color: #C0CEB1;">Pokaż stare wydarzenia</span>
+			<span style="padding: 4px;">Pokaż stare wpisy</span>
 		</div>
 	</div>
 
-	<div class="legend-container">
-		<div class="legend-title">Tytuł:</div>
-		<div class="legend-other">Data:</div>
-		<div class="legend-other">Godzina:</div>
-		<div class="legend-other">Rodzaj:</div>
-	</div>
-
-	<div data-bind="foreach: $root.lobbyPageSelectedEvents.old">
+	<div data-bind="foreach: $root.lobbyPageSelectedEvents.old" style="padding-left: 100px;">
 		<!-- ko if: $index() == 0 -->
 		<div class="legend-oldorupcoming">
 			stare
@@ -34,7 +27,7 @@
 		</div>
 	</div>
 
-	<div data-bind="foreach: $root.lobbyPageSelectedEvents.upcoming">
+	<div data-bind="foreach: $root.lobbyPageSelectedEvents.upcoming" style="padding-left: 100px;">
 		<!-- ko if: $index() == 0 -->
 		<div class="legend-oldorupcoming">
 			nadchodzące
