refactored to use JQuery promises

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -5,7 +5,9 @@
 
 	<div style="padding: 10px; border-top: 2px solid #DEDEDE">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageSelectedEvents ) }">
-			<div class="show-old-events-checkbox"></div>
+			<div class="show-old-events-checkbox">
+			<span data-bind="visible:$root.detailsPageSelectedEvents.settings.showOldEvents">✓</span>
+			</div>
 			<span style="padding: 4px;">Pokaż stare wpisy</span>
 		</div>
 	</div>
