--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -221,11 +221,6 @@ header, footer, nav, section, div {
 	z-index: 5;
 }
 
-	#lobby-navigation-arrows-right img {
-		position: static !important;
-		width: 100% !important;
-	}
-
 #details-navigation-arrows-left {
 	left: 4%;
 	position: fixed;
@@ -384,14 +379,25 @@ header, footer, nav, section, div {
 		bottom: 14px;
 	}
 
+.lobby-event-kind-tag {
+	float: left;
+	padding: 10px;
+	background: #B8A889;
+	border-left: 2px solid #9D9784;
+}
+
 .event-kind-tag {
 	display: inline-block;
 	padding: 5px;
-	/*background: rgb(184, 168, 137);*/
-	background: rgb(171, 161, 143);
+	background: #B8A889;
 	width: 100px;
-	/*box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;*/
 	line-height: 1.5;
+	text-align: center;
+}
+
+.details-event-block .event-kind-tag {
+	margin-top: 2px;
+	border-right: 2px solid #9D9784;
 }
 
 #registerPageContainer {
@@ -707,7 +713,6 @@ header, footer, nav, section, div {
 	margin-top: 20px;
 	background: #FDFCF8;
 	border: 2px solid #E4E0D1;
-	border-top: none;
 }
 
 .menu-item-number-container {
@@ -909,7 +914,7 @@ background:rgb(115, 233, 162);
 	background: url(../Images/point.png) repeat scroll 0 0 transparent;
 	z-index: 100;
 	color: white;
-	border: 1px solid #adff2f;
+	width: 200px;
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
@@ -963,11 +968,13 @@ background:rgb(115, 233, 162);
 }
 
 .title-header {
-	text-align: left;
+	text-align: center;
 	font-size: 2em;
 	color: rgb(167, 164, 154);
 	padding: 10px;
 	background: rgb(250, 248, 240);
+	border-bottom: 1px solid white;
+	border-top: 1px solid #D7D0B8;
 }
 
 .selected-content-container {
@@ -1375,9 +1382,10 @@ background:rgb(115, 233, 162);
 #lobbyEventsDisplayListContainer {
 	overflow: hidden;
 	padding-bottom: 40px;
-	background: rgb(164, 156, 137);
+	background: rgb(237, 233, 217);
 	position: relative;
-	border-right: 3px solid rgb(138, 131, 108);
+	padding-top: 40px;
+	border-right: 3px solid rgb(215, 208, 184);
 }
 
 .current-month-name-calendar {
@@ -1728,7 +1736,7 @@ legend {
 	line-height: 1;
 	background: #D7D0B8;
 	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
-	border: 2px solid rgb(248, 245, 235);
+	border: 2px solid rgb(189, 180, 153);
 }
 
 .event-block-info-body {
@@ -1738,9 +1746,18 @@ legend {
 }
 
 .details-event-block-info-body {
-	color: white;
+	color: rgb(250, 250, 250);
+	padding: 10px;
 }
 
+.event-info-calendar-icon {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 64px;
+	height: 64px;
+	background-image: url(../Images/Icons/calendar.png);
+}
 
 .event-block-info-footer {
 	padding: 10px;
@@ -1748,14 +1765,20 @@ legend {
 	text-align: left;
 	background: rgb(248, 245, 235);
 	line-height: 2;
-	border-bottom: 2px solid rgb(225, 222, 210);
-	border-right: 2px solid rgb(225, 222, 210);
+	border: 2px solid rgb(225, 222, 210);
+	border-top: none;
+	position: relative;
 }
 
-.details-event-block-info-footer {
-	margin-bottom: 10px;
+.details-event-block-footer {
+	padding: 10px;
+	text-align: left;
+	background: rgb(248, 245, 235);
 	overflow: hidden;
-	line-height: 1.5;
+	min-height: 20px;
+	border-bottom: 2px solid rgb(225, 222, 210);
+	border-right: 2px solid rgb(225, 222, 210);
+	border-left: 2px solid rgb(225, 222, 210);
 }
 
 .event-block-container {
@@ -1775,12 +1798,6 @@ legend {
 	.event-block-container .address-label {
 		font-size: .85em;
 		margin-top: 10px;
-	}
-
-	.event-block-container .hour-label {
-	}
-
-	.event-block-container .date-label {
 	}
 
 	.event-block-container .hour-date-label-container {
@@ -1805,12 +1822,7 @@ legend {
 }
 
 .details-event-block-container {
-	text-align: left;
-	padding: 0 20px;
-	position: relative;
-	line-height: 1;
-	border-left: 2px solid white;
-	border-bottom: 2px solid white;
+	margin-bottom: 4px;
 }
 
 .event-shadow-box {
@@ -1847,30 +1859,22 @@ legend {
 }
 
 .details-event-block {
-	margin-top: 20px;
+	color: rgb(250, 250, 250);
+	line-height: 1;
+	background: #D7D0B8;
+	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
+	border: 2px solid rgb(189, 180, 153);
 }
 
 .details-event-block-body {
 	color: rgb(126, 116, 101);
+	border-top: 2px solid #9D9784;
+	padding: 10px;
 }
 
 .details-event-block-label {
 	display: inline-block;
 	width: 80px;
-}
-
-.event-block {
-	/*height: 120px;
-	background: rgb(129, 127, 112);
-	color: rgb(192, 180, 153);
-	box-shadow: 2px 2px 10px rgb(166, 158, 146);
-	overflow: hidden;
-	position: relative;
-	padding: 10px;
-	padding-top: 8px;
-	text-align: left;
-	z-index: 2;
-	border: 2px solid #E9E5D4;*/
 }
 
 .today-day-header-calendar {
@@ -1881,9 +1885,6 @@ legend {
 	padding-top: 5px;
 	padding-right: 14px;
 	padding-left: 14px;
-}
-
-.event-block-footer {
 }
 
 .event-block-info-name {
@@ -1909,9 +1910,10 @@ legend {
 }
 
 .details-event-block-info-time {
-	font-size: 2.4em;
+	font-size: 2em;
 	line-height: 1;
 	color: white;
+	/* padding-bottom: 10px; */
 	margin-bottom: 10px;
 	display: inline-block;
 }
@@ -1949,14 +1951,14 @@ legend {
 .details-event-block-info-date {
 	font-size: 1.4em;
 	line-height: 1;
-	color: white;
+	color: #ABA18F;
 	display: inline-block;
 	padding-left: 10px;
 }
 
 .details-event-block-info-price {
 	font-size: 1.4em;
-	color: rgb(87, 80, 64);
+	color: rgb(132, 126, 114);
 	margin-bottom: 10px;
 	padding: 4px 4px;
 }
@@ -1965,16 +1967,15 @@ legend {
 .details-event-block-info-occupancyLimit {
 	font-size: 1.4em;
 	line-height: 1;
-	color: rgb(87, 80, 64);
+	color: rgb(132, 126, 114);
 	margin-bottom: 10px;
 	padding: 4px 4px;
 }
 
 .details-event-block-info-address {
-	font-size: 1.4em;
+	font-size: 1.2em;
 	line-height: 1;
-	color: rgb(87, 80, 64);
-	padding: 4px 4px;
+	color: rgb(132, 126, 114);
 }
 
 .event-block-info-link {
@@ -1990,6 +1991,6 @@ legend {
 }
 
 .details-event-block-info-addedby {
-	text-align: left;
-	color: rgb(87, 80, 64);
+	text-align: right;
+	color: rgb(250, 250, 250);
 }
