--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
@@ -1,61 +1,52 @@
 ﻿<div class="details-event-block-container" data-bind="attr: { 'data-eventid': id }">
-	<div class="details-event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
+	<div class="details-event-block">
 		<div class="event-kind-tag" style="float: right; text-align: center;" data-bind="style: { color: kind.headerColor }">
 			<span data-bind="text: kind.name"></span>
 		</div>
-		<div class="details-event-block-body">
+		<div class="details-event-block-body hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
 			<div class="details-event-block-info-time">
 				<span data-bind="text: startDate.displayFullTime()"></span>
 			</div>
 			<div class="details-event-block-info-date">
 				<span data-bind="text: startDate.displayFullDate()"></span>
 			</div>
-		</div>
-		<div style="display: inline-block; vertical-align: bottom;" data-bind="if: privacyLevel.value == 2">
-			<div style="height: 30px; width: 28px; background: url(/Images/Icons/star.png); background-size: contain; ">
+			<div class="details-event-block-info-address">
+					<div data-bind="text: address.street, visible: ( address.street != '' && address.street != null )"></div>
+					<span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind="	text: ' ' + address.city, visible: ( address.city != '' && address.city != null )"></span>
 			</div>
-		</div>
-		<div style="color: rgb(173, 167, 150); font-size: 2em; display: inline-block;"><span data-bind="text: name"></span></div>
-		<div class="details-event-block-footer">
-		</div>
-	</div>
-
-	<div class="details-event-block-info-container">
-		<div class="details-event-block-info-body">
-			<div class="event-block-info-description">
-				<p data-bind="text: description"></p>
-			</div>
-			<div class="event-block-info-details">
-				<p data-bind="text: details"></p>
-			</div>
-			<div data-bind="visible: ( address.street != '' && address.street != null ) || ( address.city != '' && address.city != null )" class="details-event-block-info-address">
-				<div style="display: inline-block; width: 100px; font-size: .8em; vertical-align: top;">adres:</div>
-				<div style="display: inline-block;">
-					<div data-bind="text: address.street"></div>
-					<span data-bind="text: address.zipCode"></span><span data-bind="	text: ' ' + address.city"></span>
+			<div class="details-event-block-info-body">
+				<div style="display: inline-block; vertical-align: bottom;" data-bind="if: privacyLevel.value == 2">
+					<div style="height: 30px; width: 28px; background: url(/Images/Icons/star.png); background-size: contain;">
+					</div>
 				</div>
-			</div>
-			<div class="details-event-block-info-price" data-bind="visible: price != 0 && price != ''" style="font-size: 1.4em; color: rgb(87, 80, 64);">
-				<div style="display: inline-block; width: 100px; font-size: .8em;">opłata za wstęp:</div>
-				<a data-bind="text: price + 'zł.'"></a>
-			</div>
-			<div class="details-event-block-info-occupancyLimit" data-bind="visible: occupancyLimit != null && occupancyLimit != ''">
-				<div style="display: inline-block; width: 100px; font-size: .8em;">limit miejsc:</div>
-				<a data-bind="text: occupancyLimit"></a>
-			</div>
-			<div class="event-block-info-link">
-				<p>
-					<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
-				</p>
-			</div>
-
-		</div>
-		<div class="details-event-block-info-footer">
-			<div style="float: right;">
+				<div style="color: rgb(250,250,250); font-size: 2em; display: inline-block;"><span data-bind="text: name"></span></div>
+				<div class="event-block-info-description">
+					<p data-bind="text: description"></p>
+				</div>
+				<div class="event-block-info-details">
+					<p data-bind="text: details"></p>
+				</div>
+				<div class="details-event-block-info-price" data-bind="visible: price != 0 && price != ''" style="font-size: 1.4em;">
+					<div style="display: inline-block; width: 100px; font-size: .8em;">opłata za wstęp:</div>
+					<a data-bind="text: price + 'zł.'"></a>
+				</div>
+				<div class="details-event-block-info-occupancyLimit" data-bind="visible: occupancyLimit != null && occupancyLimit != ''">
+					<div style="display: inline-block; width: 100px; font-size: .8em;">limit miejsc:</div>
+					<a data-bind="text: occupancyLimit"></a>
+				</div>
+				<div class="event-block-info-link">
+					<p>
+						<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
+					</p>
+				</div>
 				<div class="details-event-block-info-addedby">
 					<div><span data-bind="text: addedBy"></span></div>
 					<span data-bind="text: dateAdded.displayFullTime()"></span><span>&nbsp;&nbsp;</span><span data-bind="	text: dateAdded.displayFullDate()"></span>
 				</div>
+			</div>
+		</div>
+		<div class="details-event-block-footer">
+			<div style="float: right;">
 				<div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
 					<div style="text-align: right; font-size: 18px;">
 						<div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
@@ -65,5 +56,4 @@
 			</div>
 		</div>
 	</div>
-
 </div>
