--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
@@ -4,7 +4,7 @@
 	</div>
 	<div id="notes" class="notes-shadow-box" style="min-height: 200px;">
 		<div>
-			<textarea maxlength="1000" data-bind="value: $root.observableNote.data" placeholder="Dodaj Notatke" style="width: 100%; height: 100px; padding: 10px; box-sizing: border-box; font-size: 18px; background: transparent;"></textarea>
+			<textarea maxlength="1000" data-bind="value: $root.observableNote.data" placeholder="Wpisz treść notatki" style="width: 100%; height: 100px; padding: 10px; box-sizing: border-box; font-size: 18px; background: transparent;"></textarea>
 		</div>
 		<div style="float: right;" id="btnAddNewNote" data-bind="click: $root.AddNoteOnClick" class="hover-cursor-pointer">
 			<span class="save-text">dodaj</span>
