--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -7,7 +7,9 @@
 </header>	
 	<div style="padding: 10px; border-top: 2px solid #DEDEDE;">
 		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
-			<div class="show-old-events-checkbox"></div>
+			<div class="show-old-events-checkbox">
+				<span data-bind="visible: $root.lobbyPageSelectedEvents.settings.showOldEvents">✓</span>
+			</div>
 			<span style="padding: 4px;">Pokaż stare wpisy</span>
 		</div>
 	</div>
