--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="event-block-info-header" data-bind="style: { color: kind.headerColor }">
-	<div style="float: left; padding: 10px; /*background: #BAB39D; */background: #B8A889; border-left: 2px solid #9D9784;">
+	<div class="lobby-event-kind-tag">
 		<span data-bind="text: kind.name"></span>
 	</div>
 
@@ -48,12 +48,14 @@
 
 </div>
 <div class="event-block-info-footer">
-	<div data-bind="if: !isEventAddedToCurrentUserCalendar">
+	<div data-bind="ifnot: isEventAddedToCurrentUserCalendar">
 		<div data-bind="click: function () { $root.addPublicEventToMyCalendarOnClick( $element, id, startDate.year, startDate.month, startDate.day ) }" class="hover-cursor-pointer event-block-user-option" style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
 			<span>dodaj do mojego kalendarza +</span>
 		</div>
 	</div>
 	<div data-bind="if: isEventAddedToCurrentUserCalendar">
+		<div class="event-info-calendar-icon hover-cursor-pointer" data-bind="click: function () { $root.moveToDetailsPageEventOnLobbyPageEventClick( id, startDate.year, startDate.month, startDate.day ) }">
+		</div>
 		<div style="color: #67C767; padding-bottom: 10px; padding-left: 10px;">
 			<span>dodane do mojego kalendarza ✓</span>
 		</div>
@@ -63,7 +65,7 @@
 			<span>zgłoszono chęć uczestnictwa ✓</span>
 		</div>
 	</div>
-	<div  data-bind="if: !isCurrentUserSignedUpForEvent">
+	<div data-bind="ifnot: isCurrentUserSignedUpForEvent">
 		<div data-bind="click: function () { $root.signUpUserForEventOnClick( $element, id, startDate.year, startDate.month, startDate.day ) }" class="hover-cursor-pointer event-block-user-option" style="margin-bottom: 10px; border: 2px solid #E1DECF; border-right: none; border-radius: 3px; padding: 2px; padding-left: 10px; max-width: 250px;">
 			<span>zgłaszam chęć uczestnictwa</span>
 		</div>
