--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,5 +1,7 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
+<div style="height: 20px; background: #EDE9D9;">
 
+</div>
 <div class="title-header">
 	<span>Dziennik
 	</span>
@@ -113,14 +115,6 @@
 </div>
 <section id="calendarDayDetailsContainer">
 	<div id="calendarDayDetailsTable">
-		@*<div style="font-size: 3em; font-family: Raleway-Regular; text-align: center; border-bottom: 1px solid rgb(251, 250, 247); width: 50%; margin: 0 auto;">
-			<span>
-				<span style="font-size: .5em; margin-left: 6px; color: rgb(171, 157, 138);">Grafik z dnia: </span>
-				<span data-bind="text: $root.detailsPageDisplayDate.day()" style="color: rgb(148, 147, 123);"></span>
-				<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()" style="color: rgb(148, 147, 123);"></span>
-				<span data-bind="text: $root.detailsPageDisplayDate.year()" style="color: rgb(148, 147, 123); font-size: .8em;"></span>
-			</span>
-		</div>*@
 		<div class="table-details-head">
 			<div>7<span class="small-minutes">00</span></div>
 			<div>8<span class="small-minutes">00</span></div>
@@ -197,7 +191,8 @@
 				<div class="details-hour-line-21"></div>
 			</div>
 		</div>
-		<div style="color: rgb(191, 201, 184); font-size: 2em; padding: 0px 10px; background: rgb(122, 115, 103);">
+		<div style="/*color: rgb(191, 201, 184); */color: rgb(232, 224, 197); font-size: 2em; padding: 0px 10px; background: rgb(122, 115, 103);">
+			<span style="font-size:.6em;">Grafik z dnia: </span>
 			<span data-bind="text: $root.detailsPageDisplayDate.day()"></span>
 			<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()"></span>
 			<span data-bind="text: $root.detailsPageDisplayDate.year()"></span>
