able to view event details on event item click

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,56 +1,64 @@
 ﻿<div id="detailsPageAllEventsListContainer" class="display-events-overview-container">
 	<header class="display-events-overview-header">
-		<span>Mój kalendarz</span><div class="close-btn-x hover-cursor-pointer" data-bind="click:$root.closeAllSelectedEventsListContainerOnClick">x</div>
+		<span>Mój kalendarz</span><div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
 	</header>
 
-	<div style="padding: 10px; border-top: 2px solid #DEDEDE">
-		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageSelectedEvents ) }">
-			<div class="show-old-events-checkbox">
-			<span data-bind="visible:$root.detailsPageSelectedEvents.settings.showOldEvents">✓</span>
+	<div class="display-events-overview-body">
+		<div style="padding: 10px;">
+			<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageSelectedEvents ) }">
+				<div class="show-old-events-checkbox">
+					<span data-bind="visible: $root.detailsPageSelectedEvents.settings.showOldEvents">✓</span>
+				</div>
+				<span style="padding: 4px;">Pokaż stare wpisy</span>
 			</div>
-			<span style="padding: 4px;">Pokaż stare wpisy</span>
 		</div>
-	</div>
+		<div data-bind="foreach: $root.detailsPageSelectedEvents.old" style="padding-left: 100px;">
+			<!-- ko if: $index() == 0 -->
+			<div class="legend-oldorupcoming">
+				stare
+			</div>
+			<!-- /ko -->
 
-	<div data-bind="foreach: $root.detailsPageSelectedEvents.old" style="padding-left:100px;">
-		<!-- ko if: $index() == 0 -->
-		<div class="legend-oldorupcoming">
-			stare
+			<div class="display-events-overview-item">
+				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+					<div class="list-item-star">
+						<img src="~/Images/Icons/star.png" alt="public event star" />
+					</div>
+					<div class="list-item-title" data-bind="text: name"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				</div>
+				<div style="display: none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+					<div class="event-block">
+						@Html.Partial( "_LobbyEventInfo" )
+					</div>
+				</div>
+			</div>
 		</div>
-		<!-- /ko -->
+		<div data-bind="foreach: $root.detailsPageSelectedEvents.upcoming" style="padding-left: 100px;">
+			<!-- ko if: $index() == 0 -->
+			<div class="legend-oldorupcoming">
+				nadchodzące
+			</div>
+			<!-- /ko -->
 
-		<div class="display-events-overview-item">
-			<div data-bind="if: privacyLevel.value == 2" class="list-item-star">
-				<img src="~/Images/Icons/star.png" alt="public event star" />
+			<div class="display-events-overview-item">
+				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+					<div class="list-item-star">
+						<img src="~/Images/Icons/star.png" alt="public event star" />
+					</div>
+					<div class="list-item-title" data-bind="text: name"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				</div>
+				<div style="display: none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+					<div class="event-block">
+						@Html.Partial( "_LobbyEventInfo" )
+					</div>
+				</div>
 			</div>
-			<div data-bind="if: privacyLevel.value != 2" class="list-item-star">
-				<div style="width:30px;"></div>
-			</div>
-			<div class="list-item-title" data-bind="text: name"></div>
-			<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
-			<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
-			<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-		</div>
-	</div>
-
-	<div data-bind="foreach: $root.detailsPageSelectedEvents.upcoming" style="padding-left: 100px;">
-		<!-- ko if: $index() == 0 -->
-		<div class="legend-oldorupcoming">
-			nadchodzące
-		</div>
-		<!-- /ko -->
-
-		<div class="display-events-overview-item">
-			<div data-bind="if: privacyLevel.value == 2" class="list-item-star">
-				<img src="~/Images/Icons/star.png" alt="public event star" />
-			</div>
-			<div data-bind="if: privacyLevel.value != 2" class="list-item-star">
-				<div style="width: 30px;"></div>
-			</div>
-			<div class="list-item-title" data-bind="text: name"></div>
-			<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
-			<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
-			<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 		</div>
 	</div>
 </div>
