--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -772,6 +772,10 @@ header, footer, nav, section, div {
 	padding-bottom: 40px;
 }
 
+.display-events-overview-item .event-block-container {
+width:40%;
+}
+
 #addNewEventContainer {
 	top: 25px;
 	position: absolute;
@@ -970,7 +974,6 @@ background:rgb(115, 233, 162);
 }
 
 .title-header {
-	text-align: center;
 	font-size: 2em;
 	color: rgb(167, 164, 154);
 	padding: 10px;
@@ -1002,7 +1005,8 @@ background:rgb(115, 233, 162);
 	margin-left: 150px;
 }
 
-.current-weekday {
+.current-
+ {
 	color: #918D80;
 	font-size: 2em;
 }
@@ -1331,18 +1335,19 @@ background:rgb(115, 233, 162);
 #calendarDayDetailsTable {
 	position: relative;
 	padding: 0px 2%;
-	padding-bottom: 20px;
-	padding-top: 10px;
+	padding-bottom: 30px;
 	width: 88%;
-	/*background:rgb(214, 210, 193);*/
 }
 
 	#calendarDayDetailsTable .table-details-head {
 		overflow: hidden;
 		text-align: left;
-		color: rgb(123, 118, 106);
-		padding-top: 20px;
+		color: rgb(226, 219, 203);
+		padding: 10px;
+		padding-left:6px;
 		font-size: 18px;
+		border:2px solid #484848;
+		background:#6C665B;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -1378,7 +1383,6 @@ background:rgb(115, 233, 162);
 
 #lobbyEventsDisplaySection {
 	margin: 0 auto;
-	text-align: center;
 }
 
 #lobbyEventsDisplayListContainer {
@@ -1748,8 +1752,6 @@ legend {
 }
 
 .details-event-block-info-body {
-	color: rgb(250, 250, 250);
-	padding: 10px;
 }
 
 .event-info-calendar-icon {
@@ -1890,7 +1892,7 @@ legend {
 }
 
 .event-block-info-name {
-	font-size: 1.6em;
+	font-size: 2em;
 	color: white;
 }
 
@@ -1912,12 +1914,13 @@ legend {
 }
 
 .details-event-block-info-time {
-	font-size: 2em;
-	line-height: 1;
-	color: white;
-	/* padding-bottom: 10px; */
-	margin-bottom: 10px;
-	display: inline-block;
+	padding: 6px;
+    font-size: 2em;
+    color: white;
+    position: relative;
+    right: 22px;
+    display: inline-block;
+    background: #979486;
 }
 
 .event-block-info-date {
@@ -1952,10 +1955,9 @@ legend {
 
 .details-event-block-info-date {
 	font-size: 1.4em;
-	line-height: 1;
-	color: #ABA18F;
+	color: #8E8A75;
 	display: inline-block;
-	padding-left: 10px;
+	margin-left: -20px;
 }
 
 .details-event-block-info-price {
@@ -1976,8 +1978,8 @@ legend {
 
 .details-event-block-info-address {
 	font-size: 1.2em;
-	line-height: 1;
 	color: rgb(132, 126, 114);
+	padding:10px;
 }
 
 .event-block-info-link {
