--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -114,6 +114,12 @@
 	</span>
 </div>
 <section id="calendarDayDetailsContainer">
+	<div style="text-align: center; font-size: 2em; color: #484848;padding:10px;">
+		<span data-bind="text: $root.detailsPageDisplayDate.getDayName()" style="font-size: .8em; color: #B1AB98;"></span>
+		<span data-bind="text: $root.detailsPageDisplayDate.day()"></span>
+		<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()"></span>
+		<span data-bind="text: $root.detailsPageDisplayDate.year()"></span>
+	</div>
 	<div id="calendarDayDetailsTable">
 		<div class="table-details-head">
 			<div>7<span class="small-minutes">00</span></div>
@@ -130,9 +136,9 @@
 			<div>18<span class="small-minutes">00</span></div>
 			<div>19<span class="small-minutes">00</span></div>
 			<div>20<span class="small-minutes">00</span></div>
-			<div style="position: absolute; right: 10px; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
+			<div style="position: absolute; right:30px; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
 		</div>
-		<div style="width: 100%; height: 2px;"></div>
+		<div style="width: 100%; height: 1px; background: #A29C90;"></div>
 		<div class="table-details-body">
 			<div class="details-day-cell hour-cell-7">
 				<div class="details-hour-line"></div>
@@ -190,12 +196,6 @@
 				<div class="details-hour-line"></div>
 				<div class="details-hour-line-21"></div>
 			</div>
-		</div>
-		<div style="/*color: rgb(191, 201, 184); */color: rgb(232, 224, 197); font-size: 2em; padding: 0px 10px; background: rgb(122, 115, 103);">
-			<span style="font-size:.6em;">Grafik z dnia: </span>
-			<span data-bind="text: $root.detailsPageDisplayDate.day()"></span>
-			<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()"></span>
-			<span data-bind="text: $root.detailsPageDisplayDate.year()"></span>
 		</div>
 	</div>
 
