--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
@@ -19,7 +19,7 @@
 					<div style="height: 30px; width: 28px; background: url(/Images/Icons/star.png); background-size: contain;">
 					</div>
 				</div>
-				<div style="color: rgb(250,250,250); font-size: 2em; display: inline-block;"><span data-bind="text: name"></span></div>
+				<div style="color:white; font-size: 2em; display: inline-block;"><span data-bind="text: name"></span></div>
 				<div class="event-block-info-description">
 					<p data-bind="text: description"></p>
 				</div>
