--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -21,10 +21,20 @@
 			<!-- /ko -->
 
 			<div class="display-events-overview-item">
-				<div class="list-item-title" data-bind="text: name"></div>
-				<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
-				<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
-				<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+					<div class="list-item-star">
+						<img src="~/Images/Icons/star.png" alt="public event star" />
+					</div>
+					<div class="list-item-title" data-bind="text: name"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				</div>
+				<div style="display: none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+					<div class="event-block">
+						@Html.Partial( "_LobbyEventInfo" )
+					</div>
+				</div>
 			</div>
 		</div>
 		<div data-bind="foreach: $root.lobbyPageSelectedEvents.upcoming" style="padding-left: 100px;">
@@ -35,10 +45,20 @@
 			<!-- /ko -->
 
 			<div class="display-events-overview-item">
-				<div class="list-item-title" data-bind="text: name"></div>
-				<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
-				<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
-				<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+					<div class="list-item-star">
+						<img src="~/Images/Icons/star.png" alt="public event star" />
+					</div>
+					<div class="list-item-title" data-bind="text: name"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullDate()"></div>
+					<div class="list-item-other" data-bind="text: startDate.displayFullTime()"></div>
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+				</div>
+				<div style="display:none;" class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+					<div class="event-block">
+						@Html.Partial( "_LobbyEventInfo" )
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
